<resources>
    <string name="app_name">CryptoToDate</string>
    <string-array name="currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AUD</item>
        <item>AOA</item>
        <item>ARS</item>
    </string-array>
    <string-array name="languages">
        <item>EN</item>
        <item>NO</item>
        <item>DE</item>
    </string-array>
    <string-array name="crypto_currencies">
        <item>BTC</item>
        <item>ETH</item>
        <item>XRP</item>
        <item>USDT</item>
        <item>BCH</item>
        <item>BSV</item>
        <item>LTC</item>
        <item>EOS</item>
        <item>BNB</item>
        <item>ETNX</item>
        <item>XTZ</item>
        <item>OKB</item>
        <item>LINK</item>
        <item>ADA</item>
        <item>LEOTOKEN</item>
        <item>XLM</item>
        <item>XMR</item>
        <item>HT</item>
        <item>TRX</item>
        <item>CRO</item>
        <item>DASH</item>
        <item>USDC</item>
        <item>ETC</item>
        <item>NEO</item>
        <item>IOT</item>
        <item>ATOM</item>
        <item>ZEC</item>
        <item>XEM</item>
        <item>MKR</item>
        <item>ONT</item>
        <item>PAX</item>
        <item>DOGE</item>
        <item>BAT</item>
        <item>VET</item>
        <item>BTG</item>
        <item>TUSD</item>
        <item>DCR</item>
        <item>LSK</item>
        <item>QTUM</item>
        <item>ALGO</item>
        <item>HBAR</item>
        <item>ICX</item>
        <item>REP</item>
        <item>ZRX</item>
        <item>WAVES</item>
        <item>RVN</item>
        <item>BCD</item>
        <item>BTM</item>
        <item>MONA</item>
        <item>GT</item>
        <item>KNC</item>
        <item>DGB</item>
        <item>ENJ</item>
        <item>DAI</item>
        <item>MCO</item>
        <item>THETA</item>
        <item>OMG</item>
        <item>GRPH</item>
        <item>NMR</item>
        <item>KCS</item>
        <item>NANO</item>
        <item>FTXTOKEN</item>
        <item>KMD</item>
        <item>XAUT</item>
        <item>DX</item>
        <item>SNX</item>
        <item>QC</item>
        <item>NEXO</item>
        <item>SNT</item>
        <item>DGD</item>
        <item>NRG</item>
        <item>HOT</item>
        <item>SC</item>
        <item>BLOCKSTACK</item>
        <item>STEEM</item>
        <item>TKX</item>
        <item>VSYS</item>
        <item>SEELE</item>
        <item>ZEN</item>
        <item>BITTORRENT</item>
        <item>BTS</item>
        <item>CETH</item>
        <item>BCN</item>
        <item>HC</item>
        <item>SXP</item>
        <item>EURT</item>
        <item>QNT</item>
        <item>REN</item>
        <item>XVG</item>
    </string-array>
    <string name="price">%.2f</string>
    <string name="detailed_price">%.10f</string>
    <string name="hello_converter">Hello converter</string>
    <string name="language_key">Language Key</string>
    <string name="currency_key">Currency Key</string>
    <string name="langSettings">Language:</string>
    <string name="currencySettings">Currency:</string>
    <string name="darkSettings">Dark Theme:</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
    <string name="convertBtn">Convert</string>
    <string name="swapBtn">Swap Button</string>
    <string name="cryptoImage">Crypto Image</string>
    <string name="name">Name:</string>
    <string name="id">Id:</string>
    <string name="priceTimestamp">Price timestamp:</string>
    <string name="high">High:</string>
    <string name="highTimestamp">High timestamp:</string>
    <string name="symbol">Symbol:</string>
    <string name="circulating_supply">Circulating Supply:</string>
    <string name="marketCap">Market Cap:</string>
    <string name="price_date">Price Date:</string>
    <string name="rank">Rank:</string>
    <string name="priceTxt">Price:</string>
    <string name="search">Search</string>
    <string name="status_image">Status Image</string>
    <string name="highest">Highest</string>
</resources>
