<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    tools:context=".settings.SettingsFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="20dp"
       android:layout_marginTop="20dp">
       <com.google.android.material.imageview.ShapeableImageView
           android:layout_width="35dp"
           android:layout_height="35dp"
           android:layout_marginEnd="20dp"
           android:src="@drawable/crypto"/>
       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:textSize="20sp"
           android:layout_weight="1"
           android:text="@string/currencySettings"/>
       <Spinner
           android:layout_marginEnd="40dp"
           android:layout_gravity="center"
           android:id="@+id/currenciesSpinner"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:src="@drawable/flag"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/langSettings"/>
        <Spinner
            android:id="@+id/languagesSpinner"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="40dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:src="@drawable/darktheme"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:layout_width="02dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/darkSettings"/>

        <Switch
            android:id="@+id/darkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"/>


    </LinearLayout>

</LinearLayout>